--- a/index.html
+++ b/index.html
@@ -89,7 +89,26 @@
             </div>
             <hr />
             <div class="container">
-                <div class="row"></div>
+                <div class="row">
+                    <div
+                        class="humidity col-4 d-flex flex-column justify-content-center align-items-center"
+                    >
+                        <h4 class="p-2">Humidity:</h4>
+                        <h3 class="p-2" id="humidity"></h3>
+                    </div>
+                    <div
+                        class="wind-speed col-4 flex-column justify-content-center align-items-center"
+                    >
+                        <h4>Wind Speed:</h4>
+                        <h3 id="wind-speed"></h3>
+                    </div>
+                    <div
+                        class="pressure col-4 flex-column justify-content-center align-items-center"
+                    >
+                        <h4>Pressure:</h4>
+                        <h3 id="pressure"></h3>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
