--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
+        <script src="/config.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
