--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <hr />
             <div class="container">
-                <div class="row">
+                <div class="row mt-3">
                     <div
                         class="humidity col-4 d-flex flex-column justify-content-center align-items-center"
                     >
